fix warning + hide overflow on markdown

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -12,3 +12,7 @@ body {
   font-size: 13px;
   line-height: 20px;
 }
+
+.markdown-body {
+  overflow:hidden;
+}
